fix dashboard submen icon visibility

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -74,3 +74,12 @@ padding-left: 15px;
 margin-right: 0px;
 margin-left: 0px;
 }
+
+#submenu {
+  width:100%; 
+  background-color:#ddd; 
+  height:27px;
+}
+.navbar{
+  margin-bottom :0px;
+}
